# ALOE

./: .gitignore  README.md  pyproject.toml  requirements.txt
ALOE/: .gitignore  SPE.py  __init__.py  backend.py  file_utils.py  frontend.py  model_validation.py
ALOE/ASE/: geometry.py  thermo.py
ALOE/batch_opt/: ANI2xt_no_rep.py  ANI2xt_rep.py  batchopt.py
ALOE/bdfe_calculation/: bdfe_calc.py  product_generator.py
ALOE/isomer_generation/: isomer_engine.py  tautomer.py
ALOE/rank/: ranking.py
aloe/: SPE.py  __init__.py  backend.py  file_utils.py  frontend.py  model_validation.py
aloe/ASE/: geometry.py  thermo.py
aloe/batch_opt/: ANI2xt_no_rep.py  ANI2xt_rep.py  batchopt.py
aloe/bdfe_calculation/: bdfe_calc.py  product_generator.py
aloe/isomer_generation/: isomer_engine.py  tautomer.py
aloe/rank/: ranking.py
examples/: test.csv  test.py
